Bugfix for live mobile testing. The main image was too short.

--- a/_sass/_mediaq.scss
+++ b/_sass/_mediaq.scss
@@ -33,6 +33,7 @@
         #wind-window-with-menu {
             top: -8px;
             height: 100vh;
+            max-height: 100vh;
             width: 100vw;
             background-size: cover;
         }
